--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "lucide-react": "^0.509.0",
+    "react-icons": "^5.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
